# rust-mlp

./: .gitignore  Cargo.toml  README.md
src/: activation.rs  array.rs  dataset.rs  lib.rs  perceptron.rs  trainer.rs
src/tests/: activation.rs  dataset.rs  mod.rs  perceptron.rs  trainer.rs
