[package]
name = "dnn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6", default-features = false }
rand = "0.8.4"
serde = { version = "1.0.195", features = ["derive"] }
csv = "1.3.0"
log = "0.4.20"
env_logger = "0.10.1"